--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>certificate-verifier</groupId>
-    <artifactId>certificate-verifier</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>cc.abstra.pasilla</groupId>
+    <artifactId>trantor-certificate-verifier</artifactId>
+    <version>0.1</version>
+    <packaging>jar</packaging>
+    <developers>
+        <developer>
+            <id>nandosola</id>
+            <name>Nando Sola</name>
+            <email>nando@robotchrist.com</email>
+        </developer>
+    </developers>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
     <build>
         <plugins>
             <plugin>
@@ -32,7 +42,14 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.9</version>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
